fixed arrow size on tablet

--- a/src/components/node/NodeImageSwiperBlock/styles.module.scss
+++ b/src/components/node/NodeImageSwiperBlock/styles.module.scss
@@ -35,7 +35,8 @@
     transform: scale(1);
 
     @include tablet {
-      transform: scale(0.5);
+      width: 32px;
+      height: 32px;
     }
 
     &:global(.swiper-button-prev) {
@@ -43,7 +44,9 @@
       padding-right: 3px;
 
       @include tablet {
-        left: 5px;
+        left: 0;
+        border-radius: 0 $radius $radius 0;
+        transform-origin: 0 50%;
       }
     }
 
@@ -52,7 +55,9 @@
       padding-left: 3px;
 
       @include tablet {
-        right: 5px;
+        right: 0;
+        border-radius: $radius 0 0 $radius;
+        transform-origin: 100% 50%;
       }
     }
 
@@ -65,6 +70,10 @@
       font-size: 18px;
       pointer-events: none;
       font-weight: 900;
+
+      @include tablet {
+        font-size: 12px;
+      }
     }
   }
 
